--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
     "csv-parse": "^4.8.3",
     "immutable": "^4.0.0-rc.12",
     "parcel-bundler": "^1.12.4",
