--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
     "csv-parse": "^4.8.3",
     "immutable": "^4.0.0-rc.12",
+    "mathjs": "^6.3.0",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-inliner": "^1.0.10",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
+  },
+  "dependencies": {
+    "math": "0.0.3"
   }
 }
