--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "parcel src/index.html",
     "data": "node data/convert.js",
-    "build": "parcel build src/index.html --public-url . ; cp dist/index.html index.html"
+    "build": "rm ./dist/*; parcel build src/index.html --public-url /dist"
   },
   "keywords": [
     "dominion",
@@ -21,7 +21,6 @@
     "immutable": "^4.0.0-rc.12",
     "mathjs": "^6.3.0",
     "parcel-bundler": "^1.12.4",
-    "parcel-plugin-inliner": "^1.0.10",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
