--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "parcel src/index.html --out-dir ./docs",
     "data": "node data/convert.js",
-    "build": "rm ./docs/*; parcel build src/index.html --out-dir ./docs --public-url ."
+    "build": "rm ./docs/*; parcel build src/index.html --out-dir ./docs --public-url /dominion_counter"
   },
   "keywords": [
     "dominion",
