--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   "author": "kekemoto",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
-    "csv-parse": "^4.8.3",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
+    "csv-parse": "^4.12.0",
     "immutable": "^4.0.0-rc.12",
-    "mathjs": "^6.3.0",
-    "parcel-bundler": "^1.12.4",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "mathjs": "^6.6.5",
+    "parcel-bundler": "1.x",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "dependencies": {
     "math": "0.0.3"
